add referral code check ; modify telegram check
